# rp2040-projects

./: README.md
3D-printer-interface/: README.md  web_server.cpp
blind-labyrinth/: CMakeLists.txt  README.md  gameMaster.h  labyrinth.cpp  labyrinth.h  main.cpp  mode.h  visualizer.h
blind-labyrinth/Documentation/: Ideen.md  Planung.drawio
blind-labyrinth/Player/: player.h
blind-labyrinth/SDTools/: sdWriter.h  sdreader.h
blind-labyrinth/Tiles/: errorTile.h  finishTile.h  pathTile.h  startTile.h  tile.h  wallTile.h
blind-labyrinth/doxy/: annotated.html  class_game_master-members.html  class_game_master.html  class_labyrinth-members.html  class_labyrinth.html  class_visualizer-members.html  class_visualizer.html  classes.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  game_master_8h_source.html  labyrinth_8h_source.html  mode_8h_source.html  struct_mode-members.html  struct_mode.html  visualizer_8h_source.html
blind-labyrinth/doxy/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  classes_2.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_7.js  searchdata.js
blind-labyrinth/sd-card/maps/: aachen.CSV  colonia.CSV
blind-labyrinth/visual_helpers/: charpattern.h  pixel_stream_rgb565_const.h  visual_items.h
chess-api-client/: .gitignore  README.md
chess-api-client/ESP_Project/: CMakeLists.txt
chess-api-client/ESP_Project/ESP/: ESP.ino
chess-api-client/RP_Project/: CMakeLists.txt  ChessMain.cpp  ChessPieces.cpp  ChessPieces.h  Color.cpp  Color.h  Menu.cpp  Menu.h
cocktail-mixer/: README.md
cocktail-mixer/mixer_sketch/: mixer_sketch.ino
cocktail-mixer/mixer_sketch/data/: index.html
cocktail-mixer/mixer_sketch/data/js/: process.js  stylingSlider.js  tooltip.js
flappy-bird/: CMakeLists.txt  CharacterDrawer.cpp  Game.cpp  GetColors.cpp  ScoreEntry.cpp
lichtorgel/: CMakeLists.txt  README.md  YAHAL_import.cmake  lichtorgel.cpp
lichtorgel/src/: global_constants.h
lichtorgel/src/audio_fft/: audio_analyzer.cpp  audio_analyzer.h
lichtorgel/src/led_controller/: leds.cpp  leds.h
lichtorgel/src/user_controller/: user_control.cpp  user_control.h
lichtorgel/src/view/: ui_constants.h  view_controller.cpp  view_controller.h
lichtorgel/src/view/UI_components/: ui_component.cpp  ui_component.h
lichtorgel/src/view/UI_components/fft_ui_components/: fft_ui_component.cpp  fft_ui_component.h
lichtorgel/src/view/UI_components/leds_ui_components/: leds_ui_component.cpp  leds_ui_component.h
lichtorgel/src/view/UI_components/settings_ui_component/: freq_color_bar.cpp  freq_color_bar.h  led_settings_bar.cpp  led_settings_bar.h
lichtorgel/src/view/UI_components/settings_ui_component/bar_ui_component_base_class/: ui_bar_component.cpp  ui_bar_component.h
mct-sweeper/: .gitignore  CMakeLists.txt  Enums.h  README.md  game.cpp
mct-sweeper/documentatio/: mct.drawio
mct-sweeper/gui/: GameGUI.cpp  GameGUI.h
mct-sweeper/gui/gamestate/: GridUI.cpp  GridUI.h
mct-sweeper/gui/menustate/: Menu.cpp  Menu.h
mct-sweeper/gui/technical/: Interactable.h  Touch.cpp  Touch.h
mct-sweeper/logic/: Field.cpp  Field.h  Map.cpp  Map.h
mqtt-logger/: .gitignore  README.md
mqtt-logger/RoomMeasurements/: CMakeLists.txt  Room.cpp  Room.h  main.cpp
mqtt-logger/WifiTick-Programmer/: CMakeLists.txt  WifiTick-Programmer.cpp
mqtt-logger/esp8266/: CMakeLists.txt  Communication.cpp  Communication.h
pico-mp3-player/: CMakeLists.txt  config.h  main_task.cpp  main_task.h  mp3_decoder_task.cpp  mp3_decoder_task.h  pico_mp3_player.cpp
pilzinkubator/Implementation/: CMakeLists.txt  Greenhouse.cpp  Greenhouse.h  MinMaxController.cpp  MinMaxController.h
reaction-game/: README.md
reaction-game/MCT Web/: app.js  package.json
reaction-game/MCT Web/db/: MCT.db
reaction-game/MCT Web/modules/: database.js
reaction-game/MCT Web/public/: index.html
reaction-game/MCT Web/public/javascripts/: auswertungen.js
reaction-game/MCT Web/routes/: auswertungen.js
reaction-game/MCT_esp8266/: CMakeLists.txt  MCT_esp8266.cpp  NTPClient.cpp  NTPClient.h
reaction-game/MCT_rp2040/: CMakeLists.txt  Display.cpp  Display.h  MCT_rp2040.cpp  PlaySound.cpp  PlaySound.h  Stoppuhr.cpp  Stoppuhr.h
sound-machine/: .gitignore  CMakeLists.txt  Player-Manual.txt  README.md  YAHAL_import.cmake
sound-machine/mp3/: achievement-win-drum.cpp  achievement-win-drum.h  angelic-drum.cpp  angelic-drum.h  bad-joke-drum.cpp  bad-joke-drum.h  bass-futuristic.cpp  bass-futuristic.h  bass-mystirious.cpp  bass-mystirious.h  bass-pulsating.cpp  bass-pulsating.h  bass-rumble-hum.cpp  bass-rumble-hum.h  cinematic-synth-riser.cpp  cinematic-synth-riser.h  deep-dark-horror-drum.cpp  deep-dark-horror-drum.h  electric-guitar.cpp  electric-guitar.h  guitar-stroke-down-slow.cpp  guitar-stroke-down-slow.h  guitar-stroke-up-slow.cpp  guitar-stroke-up-slow.h  melodic-guitar.cpp  melodic-guitar.h  synth-intense-rhythm.cpp  synth-intense-rhythm.h  synth-mechanical-notification.cpp  synth-mechanical-notification.h  synth-pass.cpp  synth-pass.h
sound-machine/src/: UI.h  UI_swimlane.cpp  main.cpp
sound-machine/src/Model/: model.h  mp3Mappings.h  pcm_player.h
